Fix layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,3 +48,9 @@ h1 {
 h2 {
   margin-bottom: 10rem !important;
 }
+
+@media (min-width: 550px) {
+  .column, .colums {
+    margin-left: 0%;
+  }
+}
